<resources>
    <string name="app_name">7 Minutes Workout</string>
    <string name="start">START</string>
    <string name="main_image">main image</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="created_wendy_2022">created wendy@2022</string>
    <string name="exercise_image">exercise image</string>
    <string name="next_exercise_image">next exercise image</string>
    <string name="_1">1</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_end_current_exercise">This will end current exercise</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="calculator">Calculator</string>
    <string name="bmi">BMI</string>
    <string name="your_bmi">Your BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="history">History</string>
    <string name="exercise_history">Exercise History</string>
    <string name="no_workout_history">No Workout History</string>
</resources>