<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_padding"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_main"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/main_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/img_main_page"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fl_start"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/iv_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ripple_circular_button_blue"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="@color/blue_600"
            android:textSize="@dimen/text_3xl"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBmi"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/fl_start"
        app:layout_constraintEnd_toStartOf="@id/flHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ripple_circular_button_emerald"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi"
            android:textColor="@color/emerald_400"
            android:textSize="@dimen/text_xl"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </FrameLayout>
    <TextView
        android:id="@+id/tvCalculator"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calculator"
        android:textColor="@color/emerald_400"
        android:textStyle="bold"
        android:textSize="@dimen/text_base"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/flBmi"
        app:layout_constraintStart_toStartOf="@id/flBmi"
        app:layout_constraintEnd_toEndOf="@id/flBmi"
        />

    <FrameLayout
        android:id="@+id/flHistory"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/fl_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/flBmi"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ripple_circular_button_emerald"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_calendar_emerald"
            android:layout_gravity="center"/>
    </FrameLayout>
    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/history"
        android:textColor="@color/emerald_400"
        android:textStyle="bold"
        android:textSize="@dimen/text_base"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/flHistory"
        app:layout_constraintStart_toStartOf="@id/flHistory"
        app:layout_constraintEnd_toEndOf="@id/flHistory"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/created_wendy_2022"
        android:textColor="@color/gray_400"
        android:textStyle="italic"
        android:textSize="@dimen/text_xs"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>