<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BmiActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbBmi"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/gray_600" />
    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbBmi"
        android:layout_margin="10dp"
        android:background="@drawable/shape_radio_group_bg"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbMetric"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:background="@drawable/selector_radio_group_item_tab"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/metric_units"
            android:textColor="@drawable/selector_radio_group_text_color"
            android:textSize="@dimen/text_md"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/rbUs"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:background="@drawable/selector_radio_group_item_tab"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/us_units"
            android:textColor="@drawable/selector_radio_group_text_color"
            android:textSize="@dimen/text_md"
            android:textStyle="bold"/>
    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilWeight"
        android:layout_below="@id/rgUnits"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="@color/gray_400"
        app:boxStrokeColor="@color/emerald_400"
        app:hintTextColor="@color/emerald_400">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_base"
            android:textColor="@color/emerald_400"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilWeight"
        android:layout_margin="10dp"
        android:textColorHint="@color/gray_400"
        app:boxStrokeColor="@color/emerald_400"
        app:hintTextColor="@color/emerald_400">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_base"
            android:textColor="@color/emerald_400"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llUsHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilHeight"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFeet"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColorHint="@color/gray_400"
            app:boxStrokeColor="@color/emerald_400"
            app:hintTextColor="@color/emerald_400">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etFeet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feet"
                android:inputType="numberDecimal"
                android:textSize="@dimen/text_base"
                android:textColor="@color/emerald_400"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilInch"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColorHint="@color/gray_400"
            app:boxStrokeColor="@color/emerald_400"
            app:hintTextColor="@color/emerald_400">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etInch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inch"
                android:inputType="numberDecimal"
                android:textSize="@dimen/text_base"
                android:textColor="@color/emerald_400"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llUsHeight"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvYourBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/your_bmi"
            android:textColor="@color/gray_600"
            android:textAllCaps="true"
            android:textSize="@dimen/text_base" />

        <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textSize="@dimen/text_xl"
            android:textStyle="bold"
            android:textColor="@color/emerald_400"
            tools:text="15.00" />

        <TextView
            android:id="@+id/tvBMIType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColor="@color/gray_600"
            android:textSize="@dimen/text_base"
            tools:text="Normal" />

        <TextView
            android:id="@+id/tvBMIDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColor="@color/gray_600"
            android:textSize="@dimen/text_md"
            tools:text="Ops you are over weighted" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llResult"
        android:layout_margin="12dp"
        android:padding="8dp"
        android:backgroundTint="@color/emerald_400"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="@dimen/text_lg"/>

</RelativeLayout>