<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ExerciseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbExercise"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/gray_600" />

    <TextView
        android:id="@+id/tvTotalTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingHorizontal="24dp"
        android:textColor="@color/blue_600"
        android:textSize="@dimen/text_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbExercise"
        tools:text="@string/app_name" />

    <ImageView
        android:id="@+id/iv_exercise"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_marginHorizontal="16dp"
        android:contentDescription="@string/exercise_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbExercise"
        tools:src="@drawable/ic_lunge"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/get_ready_for"
        android:textColor="@color/blue_600"
        android:textSize="@dimen/text_xl"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/flProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/flProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_circular_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_exercise"
        app:layout_constraintVertical_bias="0.30">

        <ProgressBar
            android:id="@+id/pbExercise"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/layer_list_ring_progressbar_gray"
            android:indeterminate="false"
            android:layoutDirection="rtl"
            android:max="10"
            android:progress="100"
            android:progressDrawable="@drawable/layer_list_ring_progressbar_blue"
            android:rotation="90" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_circular_blue"
            android:gravity="center">

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_xl"
                android:textStyle="bold"
                tools:text="10" />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/tvNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="@color/blue_600"
        android:textSize="@dimen/text_md"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flProgressBar"
        tools:text="Next" />

    <ImageView
        android:id="@+id/ivNext"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/next_exercise_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNext"
        tools:src="@drawable/ic_lunge"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>